--- a/BAITAPLONCHOT/BAITAPLONCHOT.csproj
+++ b/BAITAPLONCHOT/BAITAPLONCHOT.csproj
@@ -95,6 +95,18 @@
     <Compile Include="frmThongKe.Designer.cs">
       <DependentUpon>frmThongKe.cs</DependentUpon>
     </Compile>
+    <Compile Include="InKH.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InKH.Designer.cs">
+      <DependentUpon>InKH.cs</DependentUpon>
+    </Compile>
+    <Compile Include="k.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>k.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmDangNhap.resx">
@@ -117,6 +129,13 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmThongKe.resx">
       <DependentUpon>frmThongKe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InKH.resx">
+      <DependentUpon>InKH.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="k.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>k.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
