--- a/BAITAPLONCHOT/BAITAPLONCHOT.csproj
+++ b/BAITAPLONCHOT/BAITAPLONCHOT.csproj
@@ -73,6 +73,12 @@
       <DependentUpon>crNhanVien.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="cr_InMotHoaDon.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>cr_InMotHoaDon.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="cr_InMotKhachHang.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -96,6 +102,12 @@
     </Compile>
     <Compile Include="DanhSachNhanVien.Designer.cs">
       <DependentUpon>DanhSachNhanVien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InHoaDonTheoMa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InHoaDonTheoMa.Designer.cs">
+      <DependentUpon>InHoaDonTheoMa.cs</DependentUpon>
     </Compile>
     <Compile Include="InKhachHangTheoMa.cs">
       <SubType>Form</SubType>
@@ -205,6 +217,10 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>crNhanVien.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="cr_InMotHoaDon.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>cr_InMotHoaDon.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="cr_InMotKhachHang.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>cr_InMotKhachHang.cs</LastGenOutput>
@@ -217,6 +233,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DanhSachNhanVien.resx">
       <DependentUpon>DanhSachNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InHoaDonTheoMa.resx">
+      <DependentUpon>InHoaDonTheoMa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InKhachHangTheoMa.resx">
       <DependentUpon>InKhachHangTheoMa.cs</DependentUpon>
